--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,36 @@
+title: Hancel Parallel Zero
+email: contacto@karisma.org.co
+description: >- # this means to ignore newlines until "baseurl:"
+  Hancel is an open source security app designed for Android mobiles
+  having in mind journalists and activists, but useful for a 
+  more general public. 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
 theme: jekyll-theme-midnight
+# theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
