--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username:  jekyll
 
 # Build settings
 # theme: jekyll-theme-midnight
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
